<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context="com.example.hewlettpackard.appemprestimo.PessoaActivity">

    <TextView
        android:id="@+id/labelCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoParcelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/labelTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/labelCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cep"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoCEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/labelEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endereco"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complemento"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/textoComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botaoAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="simularEmprestimo"
            android:text="@string/simular" />

        <Button
            android:id="@+id/botaoCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelarCadastro"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>