<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelValorEmprestimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/labelParcela"
                android:layout_alignTop="@+id/textoValorEmprestimo"
                android:text="@string/valor_emprestimo"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textoValorEmprestimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textoParcela"
                android:layout_marginTop="14dp"
                android:text="@string/valor_emprestimo"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelValorParcela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:text="@string/valor_parcela"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textoValorParcela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textoParcela"
                android:layout_alignTop="@+id/labelValorParcela"
                android:text="@string/valor_parcela"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelParcela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/labelValorParcela"
                android:layout_alignTop="@+id/textoParcela"
                android:text="@string/parcelas"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textoParcela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="14dp"
                android:text="@string/parcelas"
                android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>